--- a/MovieStorage/st.css
+++ b/MovieStorage/st.css
@@ -5,9 +5,9 @@ body {
 .item {
     color: navy;
     margin-left: 20px;
-    -webkit-border-radius: 40px 0px 0px 40px;
-    -moz-border-radius: 40px 0px 0px 40px;
-    border-radius: 40px 0px 0px 40px;
+    -webkit-border-radius: 0px 40px 40px 0px;
+    -moz-border-radius: 0px 40px 40px 0px;
+    border-radius: 0px 40px 40px 0px;
     border: 7px groove #0CA600;
     border-radius: 40px 0px 0px 40px;
     font-family: "Arial Black", Gadget, sans-serif;
@@ -20,4 +20,8 @@ body {
     font-style: normal;
     font-variant: normal;
     text-transform: none;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 80px;
+    margin-left: 80px;
 }
