--- a/MovieStorage/st.css
+++ b/MovieStorage/st.css
@@ -3,7 +3,8 @@ body {
 }
 
 .item {
-    color: navy;
+    background-color: white;
+    color: black;
     margin-left: 20px;
     -webkit-border-radius: 0px 40px 40px 0px;
     -moz-border-radius: 0px 40px 40px 0px;
@@ -11,18 +12,10 @@ body {
     border: 7px groove #0CA600;
     border-radius: 40px 0px 0px 40px;
     font-family: "Arial Black", Gadget, sans-serif;
-    font-size: 32px;
-    letter-spacing: -1.6px;
-    word-spacing: 1.8px;
-    color: #000000;
+    font-size: 20px;
     font-weight: 400;
-    text-decoration: none solid rgb(68, 68, 68);
-    font-style: normal;
-    font-variant: normal;
-    text-transform: none;
     margin-top: 0px;
     margin-bottom: 0px;
     margin-right: 80px;
     margin-left: 80px;
-    background-color: white;
 }
