--- a/MovieStorage/st.css
+++ b/MovieStorage/st.css
@@ -12,6 +12,11 @@ body {
     margin-bottom: 0px;
     margin-right: 0px;
     margin-left: 0px;
+    user-select: none; /* supported by Chrome and Opera */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
     .item:hover {
