--- a/MoneyStorage/st.css
+++ b/MoneyStorage/st.css
@@ -5,14 +5,7 @@ body {
     font-family: Arial Black,Arial Bold,Gadget,sans-serif;
 }
 
-.item {
-    background-color: #fffff0;
-    border: 1px solid black;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: 0px;
-    margin-left: 0px;
-}
+
 .btn, .item {
     user-select: none; /* supported by Chrome and Opera */
     -webkit-user-select: none; /* Safari */
@@ -20,23 +13,12 @@ body {
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
 }
-    .item:hover {
-        background-color: #ffffff;
-    }
-
-    .item:active {
-        background-color: #f0f0ff;
-    }
-
 #con {
     overflow: auto;
     height: 200px;
     background-color: #f0f0ff;
     border: 1px solid black;
     resize: vertical;
-}
-.item:focus {
-    background: olive;
 }
 #buttons {
     height: 20px;
@@ -66,6 +48,9 @@ body {
     padding-left: 5px;
     margin:0px;
 }
+.numField{
+	width: 25px;
+}
 #datas {
     padding-top: 5px;
 }
@@ -73,4 +58,19 @@ body {
     padding-top: 5px;
     padding-right: 5px;
     padding-left: 5px;
+}
+.item {
+    background-color: #fffff0;
+    border: 1px solid black;
+    margin: 0px;
+	padding: 2px;
+}
+.item:hover {
+	background-color: #ffffff;
+}
+.item:active {
+	background-color: #f0f0ff;
+}
+.item:focus {
+    background: olive;
 }
