--- a/MovieStorage/st.css
+++ b/MovieStorage/st.css
@@ -33,13 +33,13 @@ body {
     height: 200px;
     background-color: #f0f0ff;
     border: 1px solid black;
-    resize: vertical;
+    resize: horizontal;
 }
 .item:focus {
     background: olive;
 }
 #buttons {
-    height: 20px;
+    height: 25px;
     line-height: 20px;
     background: wheat;
     padding-left:5px;
@@ -49,7 +49,7 @@ body {
     background: Cornsilk;
     padding: 0px;
     margin: 0px;
-    padding-top: 5px;
+    padding-top: 0px;
     padding-bottom: 6px;
     padding-right: 5px;
     padding-left: 5px;
